<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_open_model"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:title="@string/open_model"
        app:showAsAction="always" />
    <item android:id="@+id/menu_resize_model"
        android:title="@string/resize_model"
        app:showAsAction="never" />
    <item android:id="@+id/menu_resize_part"
        android:title="@string/resize_part"
        app:showAsAction="never" />
    <item android:id="@+id/menu_ruler_tool"
        android:title="@string/ruler_tool"
        app:showAsAction="never" />
    <item android:id="@+id/menu_export_model"
        android:title="@string/export_menu"
        app:showAsAction="never" />
    <item android:id="@+id/menu_screenshot"
        android:title="@string/screenshot"
        app:showAsAction="never" />
    <item android:id="@+id/menu_model_color"
        android:title="@string/model_color"
        app:showAsAction="never" />
    <item android:id="@+id/menu_bg_color"
        android:title="@string/bg_color"
        app:showAsAction="never" />
    <item android:id="@+id/menu_model_info"
        android:title="@string/model_info"
        app:showAsAction="never" />
    <item android:id="@+id/menu_load_sample"
        android:title="@string/load_sample"
        app:showAsAction="never" />
    <item android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
